Fix word selection when there's hard breaks present.

Hard breaks get hidden by default, which is why they sometimes don't have
a cursor pos, so we try to search for them better.

BUG:518338


(cherry picked from commit 7f1454ca276c51bd4883a0859ca9244b0c9f4505)

Co-authored-by: Wolthera van Hövell tot Westerflier <griffinvalley@gmail.com>